<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/screen_padding"
    tools:context=".Intro">

    <ImageView
        android:id="@+id/logoBadge"
        android:layout_width="@dimen/logo_size"
        android:layout_height="@dimen/logo_size"
        android:background="@drawable/bg_logo_badge"
        android:padding="28dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/cd_logo"
        android:src="@drawable/ic_mic"
        app:tint="@color/on_brand"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.44"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_l"
        android:text="@string/intro_title"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.App.Title"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/introSubtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBadge" />

    <TextView
        android:id="@+id/introSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_s"
        android:text="@string/intro_subtitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.App.Subtitle"
        app:layout_constraintBottom_toTopOf="@+id/introProgress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/introProgress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_xl"
        android:indeterminate="true"
        app:indicatorColor="@color/brand"
        app:indicatorSize="34dp"
        app:trackColor="@color/brand_container"
        app:trackThickness="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
